--- a/aspnet-core/src/AppFactoryAbp.Profile/AppFactoryAbp.Profile.csproj
+++ b/aspnet-core/src/AppFactoryAbp.Profile/AppFactoryAbp.Profile.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>ASP.NET Boilerplate Angular 2 User Profile Self-Help Editor</Description>
+    <PackageLicenseUrl>https://github.com/aodendaal/abp-ng2-profile-editor/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/aodendaal/abp-ng2-profile-editor/tree/master/aspnet-core/src/AppFactoryAbp.Profile</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/aodendaal/abp-ng2-profile-editor</RepositoryUrl>
+    <RepositoryType>github</RepositoryType>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\AppFactoryAbp.Application\AppFactoryAbp.Application.csproj" />
-    <ProjectReference Include="..\src\AppFactoryAbp.Core\AppFactoryAbp.Core.csproj" />
+    <ProjectReference Include="..\src\*.Application\*.Application.csproj" />
   </ItemGroup>
 
 </Project>
