--- a/aspnet-core/src/AppFactoryAbp.Profile/AppFactoryAbp.Profile.csproj
+++ b/aspnet-core/src/AppFactoryAbp.Profile/AppFactoryAbp.Profile.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\src\*.Application\*.Application.csproj" />
+    <ProjectReference Include="..\src\AppFactoryAbp.Core\AppFactoryAbp.Application.csproj" />
   </ItemGroup>
 
 </Project>
